[package]
name = 'getargs-os'
version = '0.1.1'
authors = [
	'LoganDark <contact@logandark.mozmail.com>',
	'Cuteness! <contact@logandark.mozmail.com>' # We think cuteness contributed code here
]
edition = '2021'
rust-version = '1.56'
description = 'Provides a way for `getargs` to parse OS strings'
documentation = 'https://docs.rs/getargs-os'
readme = './README.md'
homepage = 'https://github.com/LoganDark/getargs-os'
repository = 'https://github.com/LoganDark/getargs-os'
license = 'MIT'
keywords = ['getargs', 'argv', 'arg', 'argument', 'parser']
categories = ['command-line-interface', 'rust-patterns']
exclude = ['.idea']

[features]
os_str_bytes = []

[dependencies]
getargs = '~0.5.0'

[dev-dependencies]
argv = '~0.1.6'
